--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Web Game using HTML5 Canvas revival project @igg002 thank you",
   "main": "index.js",
   "scripts": {
+    "dev": "node ./esbuild.config.js -w",
     "build": "./node_modules/.bin/esbuild --bundle --outfile=out.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
